<resources>
    <string name="app_name">Weather Logger</string>
    <string name="home_dashboard">Home</string>
    <string name="forecast">Forecast</string>
    <string name="settings">Settings</string>
    <string name="error_occurred">Oops! An error occurred. \n\n Please check your internet connection.
        \n\n Swipe down to retry.</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="weather_history">Weather History</string>
    <string name="sort_by">Sort by:</string>
    <string name="cache_string">Cache duration (seconds)</string>
    <string name="loading_text">Fetching weather</string>
    <string name="weather_in">Weather in </string>
    <string name="comma">, </string>
    <string name="temp_symbol_celsius">\u2103</string>
    <string name="temp_symbol_fahrenheit">\u2109</string>
    <string name="select_date_text">Forecast up to 5days. Select end date for forecast.</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_speed_symbol">m/s</string>
    <string name="pressure_symbol">hPa</string>
    <string name="humidity_symbol">%</string>
    <string name="instant_weather">Instant Weather</string>
    <string name="no_forecast_info">Weather forecast for selected day is unavailable.</string>
    <string name="search">Search</string>
    <string name="enter_city_text">Enter the name of the city.</string>
    <string name="zero_hits_text">Couldn\'t find your city. \n\n Go ahead and hit the search button.</string>
    <string name="gps_text">Please enable your GPS!</string>

    <!-- Preferences -->
    <string name="preference_theme_title">Theme</string>

    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>

    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="auto_battery_value" translatable="false">Auto-battery</string>
    <string name="follow_system_value" translatable="false">System</string>
    <string name="flight_mode_error">Your device is in Flight Mode, disable and restart the application.</string>
    <string name="location_permission_error">Permission was not granted! \n\n Enable permission manually in this application\'s settings and restart the application.</string>
    <string name="highprecision_internet_error">An error occurred when getting your location! \n\n Ensure your device is connected to the internet. \n\n Swipe down to refresh.</string>
    <string name="location_optimization_error">Location Optimization Permission was not granted! \n\n Enable permission manually in application settings \n and restart the application.</string>
    <string name="general_main_error">An error occurred in getting your location! \n\n Ensure your device is connected to the internet \n\n Swipe down to refresh.</string>
    <string name="enable_gps">Enable your GPS and restart!</string>
    <string name="location_permission">Location Permission</string>
    <string name="access_location_message">This application requires access to your location to function!</string>
    <string name="no">No</string>
    <string name="ask_me">Ask me</string>
    <string name="gps_required_message">GPS is required for this application to function!</string>

    <string name="preference_temperature_unit_title">Temperature Unit</string>
    <string name="temp_unit_celsius">Celsius/°C</string>
    <string name="temp_unit_fahrenheit">Fahrenheit/°F</string>

    <string name="some_error">ERROR</string>


    <!--Title-->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

    <!--error messages-->
    <string name="error_no_daata">No Data Available 😓</string>
    <string name="error_internet_connetion">No Internet Connection 😓</string>
    <string name="title_search">Search</string>
    <string name="title_details">Details</string>
    <string name="str_temp">Temperature:</string>
    <string name="str_date">Date:</string>
    <string name="str_more_details">More Details</string>


</resources>